--- a/aluraplay-projeto-base/index.html
+++ b/aluraplay-projeto-base/index.html
@@ -48,25 +48,25 @@
             <li>
                 <a class="menu__itens" href="#">
                     <i class="icone__inicio icone-item"></i>
-                    <span>Início</span></a>
+                    <span>Iníciosssss</span></a>
             </li>
 
             <li>
                 <a class="menu__itens" href="#">
                     <i class="icone__explorar icone-item"></i>
-                    <span>Explorar</span></a>
+                    <span>Exploraraaaaaa</span></a>
             </li>
 
             <li>
                 <a class="menu__itens" href="#">
                     <i class="icone__shorts icone-item"></i>
-                    <span>Shorts</span></a>
+                    <span>Shortsssss</span></a>
             </li>
 
             <li>
                 <a class="menu__itens" href="#">
                     <i class="icone__inscricoes icone-item"></i>
-                    <span>Inscrições</span></a>
+                    <span>Inscriçõessssss</span></a>
             </li>
 
             <li>
